Configuação das rotas

--- a/angular/heros/src/app/header/header.component.html
+++ b/angular/heros/src/app/header/header.component.html
@@ -7,7 +7,7 @@
 
       <nav>
         <span>
-             <a style="color: antiquewhite" href="">Cadastre-se</a> 
+             <a style="color: antiquewhite" routerLink="cadastro"> Cadastre-se</a> 
         </span>
       </nav>
     </div>
