Criação do formulario de cadastro

--- a/angular/heros/src/app/tela-cadastro/tela-cadastro.component.html
+++ b/angular/heros/src/app/tela-cadastro/tela-cadastro.component.html
@@ -1,1 +1,16 @@
-<p>tela-cadastro works!</p>
+<app-header></app-header>
+
+<main>
+    <div class="form-registration border">
+        <form>
+            <span>Preencha os dados para se cadastrar</span>
+            <div class="registration-inputs">
+                <input type="text" placeholder="e-mail*" class="border input">
+                <input type="text" placeholder="nome de usuario*" class="border input">
+                <input type="passaword" placeholder="senha*" class="border input">
+                <input type="passaword" placeholder="confirmação de senha*" class="border input">
+                <input type="submit" class="btn btn-success">
+            </div>
+        </form>
+    </div>
+</main>
